--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,12 +2,12 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  margin: 10px;
   flex-wrap: wrap;
 }
 
 .projectCards {
   margin: 10px;
+
 }
 
 /* .MuiAppBar-colorPrimary {
